tests/ui/parser/macro/issue-37113.stderr
error: expected identifier, found `String`
  --> $DIR/issue-37113.rs:4:16
   |
LL | / macro_rules! test_macro {
LL | |     ( $( $t:ty ),* $(),*) => {
LL | |         enum SomeEnum {
   | |              -------- while parsing this enum
LL | |             $( $t, )*
   | |                ^^ expected identifier
LL | |         };
LL | |     };
LL | | }
   | |_- in this expansion of `test_macro!`
...
LL |       test_macro!(String,);
   |       -------------------- in this macro invocation
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`

error: aborting due to previous error

